--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Andrei Panferov personal webpage.'
-    twitter: 'black_samorez'
+    description: 'Lavrin O.I. personal webpage.'
+    twitter: 
   analytics:
     google_analytics: ''
     baidu_tongji: ''
